2009-08-18 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Added odbx_field_isnull() and Result::fieldIsNull() functions to check for NULL values
	* Feature: Fully compatible with Debian standard version 3.8.2.0
	* Feature: Added ability to version symbols with ./configure --enable-versioned-symbols
	* Feature: Added configurable logging possibility for debug output
	* Change: Moved library handling functions to header file and declared them static

2009-06-02 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Added pkgconfig file for OpenDBX C++ library
	* Change: Moved C++ doc generation to "doc/" subdirectory
	* Bugfix: Fixed configure to build MySQL backend on Windows plattforms
	* Bugfix: Fixed masked global errno variable in MySQL backend
	* Bugfix: Check for -lz which might be necessary for MySQL backend
	* Bugfix: Fixed configure to build Oracle backend on Windows plattforms
	* Bugfix: Fixed configure to build Sybase backend on Windows plattforms
	* Bugfix: Correctly check for ODBC library on Windows plattforms
	* Bugfix: Used uninitialized variable in Win32 DLL loader (thanks to Markus Fritsche)
	* Bugfix: Rewritten Win32 DLL loader to prevent problem with SQLite (thanks to Mariano Martinez Peck)
	* Bugfix: Fixed warning in firebird backend when using newer Firebird libraries
	* Bugfix: Check for Interbase gds32 library if fbclient isn't found
	* Bugfix: Fixed compilation of odbxtest on MacOSX (thanks to Michael Atkisson)
	* Bugfix: Added OpenDBX C++ libary to spec file

2009-03-02 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Use Doxygen for generating C++ API
	* Change: Fully documented C++ functions
	* Change: Specified thrown exceptions for all C++ functions
	* Change: Used interfaces for all C++ implementation classes
	* Change: Made C++ get*() functions in OpenDBX::Exception constant
	* Change: Made return value of Result::columnName() constant
	* Change: C++ implementation class variables are private now